# mattermost-test-system-io

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS  DEPLOYMENT.md  LOCAL_DEPLOYMENT.md  dependabot.yml  release.yml
.github/workflows/: ci.yml  deploy_production.yml  deploy_staging.yml
apps/server/: Cargo.toml  Dockerfile
apps/server/src/: config.rs  error.rs  lib.rs  main.rs
apps/server/src/api/: detox.rs  files.rs  health.rs  mod.rs  openapi.rs  reports.rs  test_jobs.rs  test_reports.rs  test_results.rs  websocket.rs
apps/server/src/auth/: extractor.rs  mod.rs
apps/server/src/db/: api_keys.rs  backup.rs  github_oidc_policies.rs  html_files.rs  json_files.rs  migrations.rs  mod.rs  queries.rs  refresh_tokens.rs  report_oidc_claims.rs  screenshots.rs  test_jobs.rs  test_reports.rs  test_results.rs  upload_files.rs  users.rs  version.rs
apps/server/src/db/migrations/: 001_initial_schema.sql  002_api_keys.sql  003_upload_files.sql
apps/server/src/entity/: api_key.rs  detox_job.rs  detox_screenshot.rs  github_oidc_policy.rs  html_file.rs  json_file.rs  mod.rs  refresh_token.rs  report.rs  report_json.rs  report_oidc_claim.rs  report_stats.rs  screenshot.rs  test_case.rs  test_job.rs  test_report.rs  test_result.rs  test_spec.rs  test_suite.rs  upload_file.rs  user.rs
apps/server/src/middleware/: mod.rs  request_logger.rs
apps/server/src/migration/: m20250115_000001_create_reports.rs  m20250115_000002_create_report_stats.rs  m20250115_000003_create_test_suites.rs  m20250115_000004_create_test_specs.rs  m20250115_000005_create_test_results.rs  m20250115_000006_create_detox_jobs.rs  m20250115_000007_create_detox_screenshots.rs  m20250115_000008_create_api_keys.rs  m20250115_000009_create_upload_files.rs  m20250115_000010_create_server_metadata.rs  m20250115_000011_create_report_json.rs  m20260118_000001_create_api_keys.rs  m20260118_000002_create_reports.rs  m20260118_000003_create_jobs.rs  m20260118_000004_create_html_files.rs  m20260118_000005_create_test_suites.rs  m20260118_000006_create_test_cases.rs  m20260118_000007_create_screenshots.rs  m20260118_000008_create_json_files.rs  m20260129_000009_create_github_oidc_policies.rs  m20260129_000010_create_users.rs  m20260129_000011_create_refresh_tokens.rs  m20260226_000012_create_report_oidc_claims.rs  mod.rs
apps/server/src/models/: api_key.rs  detox_job.rs  detox_screenshot.rs  github_context.rs  github_oidc.rs  job.rs  mod.rs  report.rs  report_json.rs  report_oidc_claim.rs  report_stats.rs  test_result.rs  test_spec.rs  test_suite.rs  user.rs  ws_event.rs
apps/server/src/services/: api_key.rs  auth_admin.rs  cleanup.rs  cypress_extraction.rs  event_broadcaster.rs  extraction.rs  github_oauth.rs  github_oidc.rs  mod.rs  oidc_policy.rs  storage.rs  upload.rs
apps/server/src/services/upload/: cypress.rs  detox.rs  mod.rs  playwright.rs
apps/server/tests/integration/: auth_tests.rs  detox_tests.rs  extraction_tests.rs  mod.rs  reports_tests.rs  upload_tests.rs
apps/server/tests/oidc_e2e/: main.rs  mock_oidc_provider.rs  test_auth_invalid.rs  test_auth_valid.rs  test_claims_storage.rs  test_helpers.rs  test_key_rotation.rs  test_policy_validation.rs  test_role_authz.rs
apps/web/: .env.example  .oxfmtrc.json  eslint.config.js  index.html  oxlint.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: app.tsx  index.css  main.tsx
apps/web/src/components/: connection_status.tsx  empty_state.tsx  footer.tsx  login_button.tsx  report_card.tsx  report_list.test.tsx  report_list.tsx  test_suites_view.tsx  theme_toggle.tsx
apps/web/src/components/report/: JobPanel.tsx  JobTabs.tsx  job_panel.tsx
apps/web/src/components/report_card_parts/: git_metadata.tsx  index.ts  jobs_status.tsx  oidc_claims.tsx  status_icon.tsx  test_stats_display.tsx  utils.ts
apps/web/src/components/test_suites/: attachments_display.tsx  highlight_text.tsx  index.ts  inline_error_display.tsx  progress_bar.tsx  stat_pill.tsx  types.ts  utils.ts
apps/web/src/components/ui/: dialog.tsx  screenshot-gallery.tsx
apps/web/src/contexts/: auth_context.tsx  theme_context.tsx  websocket_context.tsx
apps/web/src/hooks/: use_websocket.ts
apps/web/src/pages/: home_page.tsx  job_report_page.tsx  report_page.test.tsx  report_page.tsx
apps/web/src/services/: api.ts  websocket.ts
apps/web/src/types/: index.ts  websocket.ts
apps/web/tests/components/: report_list.test.tsx  report_page.test.tsx
docker/: DOCKER_HUB_README.md  docker-compose.dev.yml
docs/: api-keys.md  architecture.md  overview.md  uploading-reports.md
infra/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: config.ts
infra/lib/constructs/: ecs_app_service.ts  ecs_cluster.ts  ecs_postgres.ts  github_oidc.ts  networking.ts  rds_postgres.ts  storage_bucket.ts
infra/lib/stacks/: networking_stack.ts  production_app_stack.ts  production_data_stack.ts  shared_stack.ts  staging_app_stack.ts
infra/test/: app_stack.test.ts
scripts/: bump-version.sh  upload-seed.js  upload-seed.sh
