[package]
name = "mattermost-test-system-io-server"
version = "0.4.0"
edition = "2024"
rust-version = "1.93"
description = "API server for uploading and viewing test reports"
license = "MIT"

[dependencies]
# Web framework
actix-web = "4.13.0"
actix-multipart = "0.7.2"
actix-files = "0.6.10"
actix-cors = "0.7.1"
actix-ws = "0.3.1"

# Async runtime (via actix)
tokio = { version = "1.49.0", features = ["full"] }

# Database (PostgreSQL via SeaORM)
sea-orm = { version = "=2.0.0-rc.34", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "=2.0.0-rc.34", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# S3 object storage
aws-sdk-s3 = "1.124.0"
aws-config = "1.8.14"

# Async trait for SeaORM migrations
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.18"

# Logging/tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# OpenAPI / Swagger UI
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# JWT / OIDC
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13.2", features = ["json"] }

# Utilities
uuid = { version = "1.21.0", features = ["v4", "v7", "serde"] }
sha2 = "0.10.9"
rand = "0.10.0"
hex = "0.4.3"
secrecy = { version = "0.10.3", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
num_cpus = "1.17.0"
urlencoding = "2.1.3"

[dev-dependencies]
actix-rt = "2.11.0"
actix-http = "3.11.0"
tokio-test = "0.4.5"
tempfile = "3.26.0"
rsa = { version = "0.9.8", features = ["pem"] }
base64 = "0.22.1"

[lib]
name = "mattermost_tsio_lib"
path = "src/lib.rs"

[[bin]]
name = "mattermost-tsio"
path = "src/main.rs"

[[bin]]
name = "generate-api-key"
path = "src/bin/generate_api_key.rs"

[[bin]]
name = "manage-api-keys"
path = "src/bin/manage_api_keys.rs"

[profile.release]
strip = true
lto = "thin"
